Fix header on mobile

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -18,7 +18,6 @@
   letter-spacing: -1px;
   margin-bottom: 10px;
   margin-top: 10px;
-  float: left;
 
   a {
     &:hover {
